--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,9 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+
+  --nextui-primary-foreground: 18.930000000000007 83.17% 60.39%;
+  --nextui-primary-50: 13.74 88.76% 92.75%;
 }
 
 /* @media (prefers-color-scheme: dark) {
